Link Struktur dem HMENU angepasst

--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
@@ -5,10 +5,13 @@ Der Text wird im Context von Twig übergeben, daher scheint dies in Fractal leer
 Bedeutet: Anstelle des Blocks wird das Bild eingesetzt.
 #}
 
+{% set target = config.target ? 'target="' ~ config.target ~ '"' %}
+{% set title = config.title ? 'title="' ~ config.title ~ '"' %}
+{% set class = config.class ? 'class="' ~ config.class ~ '"' %}
 
 
 {% if config.uri %}
-    <a href="{{ config.uri }}" target="{{ config.target }}" title="{{ config.title }}" class="{{ config.class }}">
+    <a href="{{ config.uri }}" {{ target }} {{ title }} {{ class }}">
         {% block link %}{{ text }}{% endblock %}
     </a>
 {% else %}
