--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navaccmenus/navaccmenu.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/navigation/navaccmenus/navaccmenu.twig
@@ -1,15 +1,18 @@
 {#
-level: level der Navi, hier root, also 1
+level:  level der Navi, hier root, also 1
+pid:    Der Navigation kann optional eine uid übergeben werden, z.B. wenn eine Navigation in einem Contentelement verwendet wird.
+        In der Praxis wird das kaum vorkommen, wenn Navigationen im Seitenheader verwendet werden.
 #}
 
 {% set level = 1 %}
 
 
 
-<div class="c-navaccmenu">
+<div id="navaccmenu{{ uid }}" class="c-navaccmenu">
     <ul class="level-{{ level }} list-unstyled">
         {% for item in items %}
             {% include '@component/navigation/navaccmenus/_navaccmenu-item/navaccmenu-item.twig' with {
+                pid: uid,
                 item: item,
                 level: level
             } only %}
