--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/siteheader.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/siteheader.twig
@@ -8,13 +8,13 @@ link:       setzt den Context und modifiziert Link-Objekt
 
 <div class="c-siteheader">
     <div class="c-siteheader__contact d-flex justify-content-between align-items-center">
-        <div>
+        <div class="w-33">
             contact
         </div>
-        <div>
+        <div class="w-33">
             <img class="c-siteheader__logo" alt="self-Logo" src="/assets/images/logo.svg">
         </div>
-        <div class="d-flex">
+        <div class="d-flex w-33">
             {% for item in sm %}
                 {% set link = 
                     {
