--- a/app/backend/packages/starter_freya/frontend/src/scss/1-settings/_bootstrap.scss
+++ b/app/backend/packages/starter_freya/frontend/src/scss/1-settings/_bootstrap.scss
@@ -17,8 +17,9 @@ $body-color: map-get($grays, '800') !default;
 @import '~bootstrap/scss/utilities';
 
 // Hier werden die Helperklassen für "width" erweitert.
-// Bootstrap default: z.B. w-33 für 1/3 Breite.
-// Was es nicht gibt: w-4 für die Breite von 4 Columns, also 1/3 Breite und dies auch nicht responsive.
+// Bootstrap default: z.B. w-25 für 1/4 Breite.
+// Was es nicht per default gibt: Breiten für 1/3, das wird daher her ergänzt.
+// Was es auch nicht gibt: w-4 für die Breite von 4 Columns, also 1/3 Breite und dies auch nicht responsive.
 // Was hier hinzu gefügt wird: w-md-cols4 -> TYPO3 übergibt 4 Columns -> 1/3 Breite ab Breakpoint medium
 // see: https://getbootstrap.com/docs/5.1/utilities/sizing/
 // used: src/ui/2-components/textmedias/_textmedia-inside/textmedia-inside.twig
@@ -34,6 +35,8 @@ $utilities: map-merge(
                         map-merge(
                             map-get(map-get($utilities, 'width'), 'values'),
                             (
+                                '33': 33.3333%,
+                                '66': 66.6667%,
                                 'col1': 8.3333%,
                                 'col2': 16.6667%,
                                 'col3': 25%,
