[FEATURE][#65] Frontend Integration der Desktop Navigation

--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/headings/heading.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/headings/heading.twig
@@ -26,7 +26,7 @@ header_link.config.uri:     der Link wird nur optional embeded
                 'header': header,
                 'link': header_link,
             } only %}
-                {% block link %}{{ header }}{% endblock %}
+                {% block linkContent %}{{ header }}{% endblock %}
             {% endembed %}
         {% else %}
             {{ header }}
