--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/_index.scss
@@ -1,4 +1,5 @@
 // @import './component/index';
 @import './accordions/index';
 @import './containers/index';
+@import './navigation/index';
 @import './teasers/index';
