--- a/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/1-objects/links/link.twig
@@ -1,4 +1,7 @@
 {#
+class:              Klassen, die aus dem Backend kommen, z.B. 'download'
+additionalClass:    hier können Klassen für das Templating übergeben werden, z.B. 'd-flex'
+
 {% block linkContent %}: ermöglich es den übergebenen {{ text }} als Default Inhalt zu setzen. Sollte dies nicht
 gewünscht sein, kann in dem aufrufenden Template {% block linkContent %} überschrieben werden.
 
@@ -7,15 +10,14 @@ see: https://twig.symfony.com/doc/3.x/tags/embed.html
 
 {% set target = config.target ? 'target="' ~ config.target ~ '"' %}
 {% set title = config.title ? 'title="' ~ config.title ~ '"' %}
-{% set class = config.class ? 'class="' ~ config.class ~ '"' %}
-
+{% set class = (config.class or additionalClass) ? 'class="' ~ config.class ~ ' ' ~ additionalClass ~ '"' %}
 
 {% if config.uri %}
     <a href="{{ config.uri }}" {{ target }} {{ title }} {{ class }}>
         {% block linkContent %}{{ text }}{% endblock %}
     </a>
 {% else %}
-    <span class="{{ config.class }}">
+    <span {{ class }}>
         {% block linkContent %}{{ text }}{% endblock %}
     </span>
 {% endif %}
