--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/_index.scss
@@ -1,11 +1,11 @@
 .c-siteheader {
    &__logo {
       width: auto;
-      max-height: 60px;
+      height: 60px;
    }
 
-   &__sm {
+   &__sm .o-image {
       width: auto;
-      max-height: 30px;
+      height: 30px;
    }
 }
