--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/_index.scss
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/site/siteheaders/_index.scss
@@ -4,8 +4,11 @@
       height: 60px;
    }
 
-   &__sm .o-image {
-      width: auto;
-      height: 30px;
+   &__contact,
+   &__sm { 
+      .o-image {
+         width: auto;
+         height: 30px;
+      }
    }
 }
