[!!!][FEATURE][#76] Optionen für die Sichtbarkeit von Inhaltselementen definiert

--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/containers/container.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/containers/container.twig
@@ -5,7 +5,7 @@ Wenn es einen Hintergrund über volle Breite gibt, wird um den Container ein zus
 #}
 
 {% set containerContent %}
-    <div id="con{{ uid }}" class="{{ tx_starter_container|default('container') }} container-{{ CType|default('no-type') }} {{ tx_starter_showbyscreensize }} {{ space_before_class }} {{ space_after_class }}">
+    <div id="con{{ uid }}" class="{{ tx_starter_container|default('container') }} container-{{ CType|default('no-type') }} {{ tx_starter_visibility }} {{ space_before_class }} {{ space_after_class }}">
         {% block moduleContentBlock %}{% endblock %}
     </div>
 {% endset %}
@@ -13,7 +13,7 @@ Wenn es einen Hintergrund über volle Breite gibt, wird um den Container ein zus
 
 
 {% if tx_starter_background_fluid and tx_starter_background %}
-    <div class="{{ tx_starter_background }} {{ tx_starter_showbyscreensize }}">
+    <div class="{{ tx_starter_background }} {{ tx_starter_visibility }}">
         {{ containerContent }}
     </div>
 {% else %}
