[TASK][#72] HTML Verschachtelung vereinfacht

--- a/app/backend/packages/starter_freya/frontend/src/ui/_html/h-page.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/_html/h-page.twig
@@ -9,10 +9,7 @@
         <body class="pageLayout--{{ layout }} pageType--{{ pageData.doktype }}">
 {% endif %}
 
-<main id="main">
-    {% block body %}
-    {% endblock %}
-</main>
+{% block body %}{% endblock %}
 
 {% if env != 'CMS' %}
             {% include '@h-foot' %}
