[TASK][CLEANUP] Unify handling of bodytext in frontend

--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-inside/textmedia-inside.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-inside/textmedia-inside.twig
@@ -16,6 +16,6 @@ thisAlignX:         Bild links oder rechts, inclusive dem entsprecheden margin .
         {% include '@object/pictures/picture.twig' with image only %}
     </div>
     {% include '@object/rtes/rte.twig' with {
-        'rte': text
+        'rte': bodytext
     } only %}
 </div>
