--- a/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/2-components/textmedias/_textmedia-beside/textmedia-beside.twig
@@ -8,7 +8,7 @@ thisAlignX:     Bild links oder rechts ... default: Bild links.
 <div class="row flex-column {{ thisAlignX }} align-items-center align-items-md-start">
     <div class="col">
         {% include '@object/rtes/rte.twig' with {
-            'rte': text
+            'rte': bodytext
         } only %}
     </div>
     <div class="col-{{ thisGridImageColsSmall|default(12) }} col-md-{{ grid.imageCols.medium|default(3) }} col-lg-{{ grid.imageCols.large|default(6) }}
