--- a/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m02-text/m02-text.twig
+++ b/app/backend/packages/starter_freya/frontend/src/ui/3-modules/m02-text/m02-text.twig
@@ -17,7 +17,9 @@ componentBackground: Wenn der Background fluid ist, dann wird er im Container ge
             'overline': overline,
         } only %}
 
-        {{ bodytext }}
+        {% include '@object/rtes/rte.twig' with {
+            'rte': bodytext
+        } only %}
 
         {% include '@component/module/modulefooters/modulefooter.twig' with {
             'tx_starter_cta_link': tx_starter_cta_link,
